--- a/style.css
+++ b/style.css
@@ -1,32 +1,85 @@
 @charset "UTF-8";
 
-body{
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3: "Sriracha", cursive;
+}
+
+*{
     margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    font-family: var(--font1);
+    background-color: darkgray;
+    min-height: 100vh;
 }
 header{
-    padding-top: 10px;
     background-color: black;
     color: white;
     text-align: center;
 
 }
+header > h1 {
+    font-family: var(--font2);
+    padding-top: 50px;
+    /*text-transform: uppercase;*/
+    font-variant: small-caps;
+    font-size: 10vw;
+}
+
+header > p {
+    padding-bottom: 50px;
+}
 a{
     color: white;
     text-decoration: none;
+    font-weight: bolder;
 }
 a:hover{
+    text-decoration: underline;
     color: rgb(104, 14, 14);
 }
 main{
     color: black;
-    line-height: 1.5em;
 
 }
+section{
+    font-family: var(--font3);
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em; 
+    padding-left: 30px;
+    font-size: 3.5vw;
+}
 
-footer{background-color: black;
+.normal{
+    background-color: white;
+    color: black;
+}
+.imagem{
+    background-color: rgb(30, 30, 31);
+    color: white;
+}
+
+.imagem > p {
+    background-color: rgba(0, 0, 0, 0.251);
+    display: inline-block;
+    padding: 5px;
+}
+
+footer{
+background-color: black;
 color: white;
 font-family: Arial, Helvetica, sans-serif;
 text-align: center;
+padding: 10px;
 }
 
 
