--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ section{
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 .normal{
     background-color: white;
     color: black;
@@ -66,15 +70,30 @@ section{
 .imagem{
     background-color: rgb(30, 30, 31);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.47);
+    background-size: cover;
+    background-attachment: fixed;
+    
 }
 
 .imagem > p {
-    background-color: rgba(0, 0, 0, 0.251);
+    background-color: rgba(0, 0, 0, 0.514);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+#img01{
+    background-image: url("./imagens/background001.jpg");
+    background-position: right center;
+   
+}
+#img02{
+    background-image: url("./imagens/background002.jpg");
+  
+    
 }
 
-footer{
+footer{ 
 background-color: black;
 color: white;
 font-family: Arial, Helvetica, sans-serif;
